--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -1,3 +1,54 @@
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  margin-top: 10%;
+  background-color: #4CAF50;
+  display: flex;
+  flex-direction: column;
+}
+
+div.standard div {
+  background-color: #FFF9C4; 
+  border: 3px solid #FFD54F;
+  border-radius: 15px;
+  padding: 20px;
+  margin: 30px auto;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center; 
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  border: 1px solid #000000;
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+
+h2 {
+  color: #FF6F61; 
+  font-size: 2em;
+  margin-bottom: 10px;
+  text-shadow: 1px 1px #FFD9E8;
+}
+
+p {
+  font-size: 1.2em;
+  line-height: 1.5;
+  margin: 5px 0;
+  color: #555; 
+}
+
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -22,13 +73,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
@@ -45,13 +96,17 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 4px;
 }
+
 button:hover {
   border-color: #646cff;
+
 }
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 2px auto -webkit-focus-ring-color;
 }
 
 .card {
