--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -1,3 +1,5 @@
+
+
 body {
   font-family: Arial, sans-serif;
   display: flex;
@@ -5,10 +7,68 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
-  margin-top: 10%;
+  margin-top: 75px;
   background-color: #4CAF50;
   display: flex;
   flex-direction: column;
+}
+
+.middle-block {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 700px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  margin-top: 150px;
+}
+
+/* header {
+  background: #388388;
+  border-bottom: 5px solid #4ABFBD;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 75px;
+} */
+
+header {
+  background: #ffffff;
+  border-bottom: 5px solid #b8b8b8;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 125px;
+}
+
+footer {
+  background: #333;
+  border-top: 5px solid #292929;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+  bottom: 0;
+  right: 0;
+  height: 10%;
 }
 
 :root {
