--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -1,4 +1,7 @@
-
+html, body {
+  height: 100%;
+  margin: 0;
+}
 
 body {
   font-family: Arial, sans-serif;
@@ -7,39 +10,84 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
-  margin-top: 75px;
-  background-color: #4CAF50;
+  /* background-color: #4CAF50; */
+  background: linear-gradient(to bottom, #ADD8E6, #90EE90);
   display: flex;
   flex-direction: column;
 }
 
-.middle-block {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 700px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: none;
-  margin-top: 150px;
+#app {
+  padding: 0px !important;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;  
 }
 
-/* header {
-  background: #388388;
-  border-bottom: 5px solid #4ABFBD;
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  box-sizing: border-box;
-  position: fixed;
-  top: 0;
+.page-title {
+  font-family: 'Georgia', serif;
+  font-size: 3rem;
+  text-align: center;
+  background: linear-gradient(90deg, #3498db, #9b59b6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 20px 0;
+}
+
+.post-text{
+  font-family: 'Arial', sans-serif;
+  font-size: 1.5rem;
+  color: #7f8c8d;
+  text-align: center;
+  margin: 10px 0;
+  line-height: 1.6;
+}
+
+main {
+  flex: 1; /* Fills the remaining space between header and footer */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  padding: 0 !important;
+  margin: 0 !important;
+  margin-top: 104px !important;
+}
+
+main > div:nth-child(2) {
+  padding: 0 !important;
+  margin: 0 !important;
+  background: linear-gradient(to bottom, #ADD8E6, #90EE90);
+  /* background-color: #63b7e7; */
+}
+
+#left-background,
+#right-background {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;  /* Fixed position to make them not scroll */
+  height: 100%;  /* Take up the full height */
+  width: inherit;
+}
+
+#left-background {
+  background-image: url(../src/assets/left-background.webp);
   left: 0;
-  z-index: 1000;
-  height: 75px;
-} */
+}
+
+#right-background {
+  background-image: url(../src/assets/right-background.webp);
+  right: 0;
+}
+
+#logo {
+  cursor: pointer;
+}
+
+#logo:hover {
+  cursor: pointer;
+  border: #4CAF50 3px solid;
+}
 
 header {
   background: #ffffff;
@@ -54,21 +102,28 @@ header {
   top: 0;
   left: 0;
   z-index: 1000;
-  height: 125px;
+  max-height: 109px;
 }
 
 footer {
   background: #333;
   border-top: 5px solid #292929;
   padding: 10px 20px;
-  display: flex;
+  color: white;
+  /* text-align: center;
+  width: 100%;
+  box-sizing: border-box; */
+  background: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 20px;
+  border-top: 5px solid #292929;
+  position: fixed;
+  bottom: 0;
+
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  box-sizing: border-box;
-  bottom: 0;
-  right: 0;
-  height: 10%;
+  display: flex;
 }
 
 :root {
@@ -108,23 +163,39 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
+
+.button-orange{
+  /* border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #5858bc;
   cursor: pointer;
   transition: border-color 0.25s;
-  margin: 4px;
+  margin: 4px; */
+
+  background-color: #e67e22; /* Sunset Orange */
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-button:hover {
-  border-color: #646cff;
-
+.button-orange:hover {
+  /* border-color: #646cff; */
+  background-color: #d35400; /* Deeper Orange on Hover */
 }
+
+/* button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+} */
 
 button:focus,
 button:focus-visible {
@@ -135,12 +206,12 @@ button:focus-visible {
   padding: 2em;
 }
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -154,3 +225,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.ql-editor, .ql-toolbar{
+  background-color: white;
+}
+
