--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -50,7 +50,7 @@ main {
   align-items: center; */
   padding: 0 !important;
   margin: 0 !important;
-  margin-top: 104px !important;
+  margin-top: 95px !important;
 }
 
 main > div:nth-child(2) {
@@ -58,6 +58,10 @@ main > div:nth-child(2) {
   margin: 0 !important;
   background: linear-gradient(to bottom, #ADD8E6, #90EE90);
   /* background-color: #63b7e7; */
+}
+
+input, textarea {
+  background-color: white;
 }
 
 #left-background,
